Loose vertices at the origin get a zero-length normal vector #89249

Closed
opened 2021-06-17 21:16:07 +02:00 by Fen · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 3.0.0 Alpha, branch: master. Commit hash: ed4222258e
Worked: 2.79

2.80 appears to have introduced the current behavior.

Short description of error
Loose vertices have their normals set to point away from the world origin.

Vertices at the origin wind up with a zero-length vector.

This causes data.validate() to complain; enabling the verbose flag prints an error about the normal.

Exact steps for others to reproduce the error

  1. Go into edit mode
  2. Merge the starting cube's vertices at the center
  3. Turn on the vertex-normal overlay. Observe that the vertex has no normal
  4. Go back into object mode and open the Python console
  5. Run bpy.context.active_object.data.validate(verbose=True)
  6. The function should return true, and an error should be printed to the console about the bad normal
  7. Toggle edit mode on and off
  8. Validate again. The problem should have returned.

I guess it should just default to a z-up normal, since that's what the validate() function does.

This also occurs for vertices attached to zero-area faces, as seen here:

image.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master. Commit hash: ed4222258ea6fff51c17a2e244b497f03a8e0162 Worked: 2.79 2.80 appears to have introduced the current behavior. **Short description of error** Loose vertices have their normals set to point away from the world origin. Vertices at the origin wind up with a zero-length vector. This causes `data.validate()` to complain; enabling the verbose flag prints an error about the normal. **Exact steps for others to reproduce the error** 1. Go into edit mode 2. Merge the starting cube's vertices at the center 3. Turn on the vertex-normal overlay. Observe that the vertex has no normal 4. Go back into object mode and open the Python console 5. Run `bpy.context.active_object.data.validate(verbose=True)` 6. The function should return true, and an error should be printed to the console about the bad normal 7. Toggle edit mode on and off 8. Validate again. The problem should have returned. I guess it should just default to a z-up normal, since that's what the `validate()` function does. This also occurs for vertices attached to zero-area faces, as seen here: ![image.png](https://archive.blender.org/developer/F10180605/image.png)
Author

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 61b22d27c8

This issue was referenced by 61b22d27c8b9b64f04a7dd585eac11134184a235

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2021-06-23 05:58:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89249
No description provided.