Fix T89249: incorrect mesh validate error with zeroed vertex normals

It's not an error for centered vertices to have a zero normal.